--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "cors": "^2.8.5",
+    "firebase": "^8.6.1",
+    "firebase-tools": "^9.10.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
