--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "firebase": "^8.6.1",
     "firebase-tools": "^9.10.2",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
